syntax = "proto3";
package bluk.games;

import "types/miscellaneous.proto";
import "types/metadata/ClustersService.proto";
import "types/cluster/server.proto";
import "types/cluster/health.proto";

// Library's service ClustersService
service ClustersService {
  rpc GetAll(EmptyRequest) returns (GetAllResponse) {}
};

// Cluster specific service
service OneClusterService {
  // Servers-related
  rpc GetAllServers (EmptyRequest) returns (GetAllServersResponse) {}
  rpc CreateServer (CreateServerRequest) returns (Server) {}

  // Cluster's Health related
  rpc GetClusterHealth (EmptyRequest) returns (ClusterHealth) {}
  rpc SendServerHealth (SendServerHealthRequest) returns (ServerHealth) {}
};